    context description after the first under some circumstances.  It
    now displays context descriptions correctly in that case too.

  - Don't prevent examples from loading a different luaposix than the
    installed default loaded by Specl.  This allows the luaposix specs
    to work in the build tree without priming LUA_CPATH and LUA_PATH
    before calling specl, for example.


* Noteworthy changes in release 12 (2014-04-25) [stable]

** New features:

  - Now that this API is stable, there is full documentation for
    `specl.shell` in doc/specl.md.

  - New `specl.inprocess.capture` function for running examples that
    interact with io streams.  `inprocess.capture` wraps a function call
    so that standard input calls read from the supplied buffer, and any
    output is captured rather than leaked:

      inprocess.capture (function (...)
        print (...)
        io.stderr:write (io.stdin:read "*a")
        return "first", 2
      end,
      {"foo", "bar"},
      "input content")

        => "foo\tbar\n", "input content", "first", 2

    i.e. standard output, standard error, function return values

  - The report formatter no longer displays orphaned contexts of
    filtered-out examples.

** Bug fixes:

  - Specl no longer crashes when requiring system libraries (such as
    math, bit32 etc) from examples or spec_helpers.

  - The `--fail-fast` option no longer stops when encountering a failing
    expectation in a pending example.

  - Ignore any LUA_INIT or LUA_INIT_5_2 settings in the execution
    environment, since they can easily corrupt the behaviour of example
    code.  If you need to write examples that deliberately interact with
    those envvars, use `specl.shell` to isolate them correctly.

* Noteworthy changes in release 11 (2014-04-05) [stable]

** New features:

  - Built-in matchers compare nested tables and objects in about 25% of
    the time required previously, and is optimised for tail-call